--- a/1.RoadMap-40h/02.Session-02-JSX-Components-Props/2.4PropTypes.md
+++ b/1.RoadMap-40h/02.Session-02-JSX-Components-Props/2.4PropTypes.md
@@ -1,9 +1,11 @@
 # ⭐ Typechecking With PropTypes
 
-PropTypes là một cách tốt để xác thực đầu vào của component. Hơn nữa nếu một ai đó muốn sử dụng component của bạn, nó cung cấp một cái nhìn tổng quan cho tất cả các props và loại dữ liệu của nó. Việc sử dụng PropTypes là rất hữu dụng nó tránh được những lỗi khó chịu và cải thiện được tính tái sử dụng component của bạn rất nhiều (Hiểu một cách đơn giản PropTypes là: Giúp chúng ta kiểm tra các kiểu dữ liệu của các props mà component (hoặc container) nhận vào)
+PropTypes là một cách tốt để xác thực đầu vào của component. Hơn nữa nếu một ai đó muốn sử dụng component của bạn, nó cung cấp một cái nhìn tổng quan cho tất cả các props và loại dữ liệu của nó. Việc sử dụng PropTypes là rất hữu dụng nó tránh được những lỗi khó chịu và cải thiện được tính tái sử dụng component của bạn rất nhiều 
+
+Hiểu một cách đơn giản PropTypes là: Giúp chúng ta kiểm tra các kiểu dữ liệu của các props mà component (hoặc container) nhận vào.
 
 - Doc: <https://reactjs.org/docs/typechecking-with-proptypes.html>
-- Install package: At root folder of project, open terminal (Ctrl + ` ), type
+- Cách cài đặt Package
 
 ```bash
     npm install --save prop-types
