--- a/1.RoadMap-40h/02.Session-02-JSX-Components-Props/2.1.Components-Props.md
+++ b/1.RoadMap-40h/02.Session-02-JSX-Components-Props/2.1.Components-Props.md
@@ -9,6 +9,7 @@ Doc:  <https://reactjs.org/docs/components-and-props.html>
 - Các component thực hiện công việc giống như các functions trong JavaScript nhưng chúng độc lập và nhiệm vụ chính là trả về HTML thông qua hàm render
 - Có 2 loại component là Function Component và Class Component.
 
+Ví dụ hình dung Components: <https://widget-components.vercel.app>
 
 ### 🔷 Cách định nghĩa 1 component
 
