--- a/1.RoadMap-40h/02.Session-02-JSX-Components-Props/2.2.Introducing-JSX.md
+++ b/1.RoadMap-40h/02.Session-02-JSX-Components-Props/2.2.Introducing-JSX.md
@@ -1,5 +1,7 @@
 # Introducing JSX
 
+Doc: <https://reactjs.org/docs/introducing-jsx.html>
+
 ## ⭐ 1. JSX là gì ?
 
 JSX là viết tắt của JavaScript XML, một cú pháp mở rộng cho phép lập trình viên viết HTML trong React một cách dễ dàng. 
@@ -37,6 +39,8 @@ const element = (
 //Biểu thức trong JSX
 const name = 'Josh Perez';
 const element = <h1>Hello, {name}</h1>;
+
+const element = <a href="https://www.reactjs.org"> link </a>;
 
 const myelement = <h1>React is {5 + 5} times better with JSX</h1>;
 
