--- a/1.RoadMap-40h/02.Session-02-JSX-Components-Props/2.5Add-style-Component.md
+++ b/1.RoadMap-40h/02.Session-02-JSX-Components-Props/2.5Add-style-Component.md
@@ -1,6 +1,6 @@
-# ⭐ Adding styles
+# ⭐ Thêm Css vào Dự Án
 
-In React, you specify a CSS class with className. It works the same way as the HTML class attribute:
+Trong React bạn sử dụng CSS class với tên là className. Nó giống như HTML class attribute:
 
 ```js
 
