--- a/1.RoadMap-40h/02.Session-02-JSX-Components-Props/2.1.Components-Props.md
+++ b/1.RoadMap-40h/02.Session-02-JSX-Components-Props/2.1.Components-Props.md
@@ -13,8 +13,10 @@ Ví dụ hình dung Components: <https://widget-components.vercel.app>
 
 ### 🔷 Cách định nghĩa 1 component
 
+Trong file App.js bạn thêm đoạn code sau
+
 ```js
-//Step 1: Define the function
+//Define the function
 // Component names must start with a capital letter 
 function Profile() {
   return (
@@ -24,11 +26,12 @@ function Profile() {
     />
   )
 }
-//Step 2:  Export the component with  export default
-export default Profile
 ```
 
-Một Component hiệu quả cần đảm bảo được các tiêu chí sau: 
+Thì có nghĩa bạn đang định nghĩa một Component có tên Profile
+
+
+**Một Component hiệu quả cần đảm bảo được các tiêu chí sau:**
 
 - Một component chỉ nên thực hiện một nhiệm vụ hay có một trách nhiệm duy nhất
 - Giao phó việc xử lý dữ liệu cho một module bên ngoài
@@ -108,7 +111,7 @@ React nổi bật với việc tái sử dụng, do vậy bạn nên chia nhỏ 
 
 Để làm được vậy bạn cần tạo ra một file .js hoặc .jsx, .ts và đặt code của component vào trong đó.
 
-Ví dụ: Tạo một một file Car.js
+Ví dụ: Tạo một một file Car.js (tên file bằng tên Component)
 
 ```js
 function Car() {
@@ -117,7 +120,9 @@ function Car() {
 //ES6 syntax 
 export default Car;
 ```
+
 Bây giờ tại component muốn sử dụng lại Car.js thì import vào
+
 ```js
 import React from 'react';
 //ES6 import
