--- a/1.RoadMap-40h/02.Session-02-JSX-Components-Props/2.1.Components-Props.md
+++ b/1.RoadMap-40h/02.Session-02-JSX-Components-Props/2.1.Components-Props.md
@@ -17,7 +17,6 @@ Trong file App.js bạn thêm đoạn code sau
 
 ```js
 //Define the function
-// Component names must start with a capital letter 
 function Profile() {
   return (
     <img
@@ -27,6 +26,7 @@ function Profile() {
   )
 }
 ```
+Tên của component viết theo kiểu Pascal Case (còn được gọi là Upper Camel Case)
 
 Thì có nghĩa bạn đang định nghĩa một Component có tên Profile
 
@@ -43,7 +43,7 @@ Thì có nghĩa bạn đang định nghĩa một Component có tên Profile
 
 ### 🔷 Cách đặt tên một Component
 
-Bắt buộc ký tự đầu tiên phải viết HOA
+Bắt buộc ký tự đầu tiên phải viết HOA theo kiểu Pascal Case (còn được gọi là Upper Camel Case)
 
 Ví dụ: Profile, BlogDetails
 
