--- a/1.RoadMap-40h/10.Session-10-Redux-and-More/4.Zustand.md
+++ b/1.RoadMap-40h/10.Session-10-Redux-and-More/4.Zustand.md
@@ -1,1 +1,84 @@
-https://dev.to/franklin030601/using-zustand-with-react-js-9di
+# State management với Zustand
+
+![Zustand](https://github.com/pmndrs/zustand/raw/main/bear.jpg)
+
+
+Zustand là một state management library nhanh và dễ dàng mở rộng đang được nhiều người quan tâm hiện nay. Nó được xây dựng bởi các lập trình viên đã tạo ra Jotai và React-springs. Zustand được biết đến bởi tính đơn giản và sử dụng hooks mà không cần theo một kiểu mẫu nhất định.
+
+**Cài đặt:**
+
+```bash
+npm install zustand
+```
+
+Dùng cho TypeScript: <https://github.com/pmndrs/zustand#typescript-usage>
+
+Chúng ta làm một ví dụ AppCountdown sử dụng Zustand để học cách sử dụng
+
+
+## Bước 1: Tạo một store
+
+
+```js
+import {create} from 'zustand';
+//useStore: là tên của Store, có thể đặt tùy thích nhưng bắt đầu bằng use
+const useStore = create((set) => ({
+    count: 0,
+    actionUp: () => set(state => ({ count: state.count + 1 })),
+    actionDown: () => set(state => ({ count: state.count - 1 })),
+}));
+
+```
+- **`create()`** là một function nó nhận đầu vào là một initState.
+
+- Tuy nhiên zustand quản lý `state` tập trung thành ở một chổ mà chúng ta gọi nó với một khái niệm là `store`
+
+- zustand sử dụng một phương thức set để `merges state` gộp count, actionUp, actionDown... lại thành 1 state.
+
+
+## Bước 2: Truy cập vào Store
+
+Để có thể lấy giá trị của state nằm trong store cụ thể thì chúng ta chỉ cần gọi lại store đó  ở component như sau
+
+```js
+const CountApp = () => {
+    //Truy cập lần lượt các giá trị của state strong Store
+    const count = useStore(state => state.count);
+    const actionUp = useStore(state => state.actionUp);
+    const actionDown = useStore(state => state.actionDown);
+
+  return (
+    <div>
+      <h1>{count}</h1>
+      <button onClick={actionDown}>Down</button>
+      <button onClick={actionUp}>Up</button>
+    </div>
+  )
+}
+export default CountApp;
+```
+
+
+## Persist middleware
+
+Doc: <https://github.com/pmndrs/zustand/blob/main/docs/integrations/persisting-store-data.md>
+
+**Persist** giúp bạn lưu trữu Zustand state xuống Storage (e.g., localStorage, AsyncStorage, IndexedDB, etc.)
+
+
+```js
+export const useBearStore = create(
+  persist(
+    (set, get) => ({
+      bears: 0,
+      addABear: () => set({ bears: get().bears + 1 }),
+    }),
+    {
+      name: 'food-storage', // name of the item in the storage (must be unique)
+      storage: createJSONStorage(() => sessionStorage), // (optional) by default, 'localStorage' is used
+    }
+  )
+)
+
+```
+Xem ở phần ví dụ tạo giỏ hàng 2.Examples\Shopping-Cart-Zustand
