--- a/1.RoadMap-40h/Session-02-JSX-Components-Props/2.1.Introducing-JSX.md
+++ b/1.RoadMap-40h/Session-02-JSX-Components-Props/2.1.Introducing-JSX.md
@@ -4,25 +4,25 @@ Doc: <https://reactjs.org/docs/introducing-jsx.html>
 
 ## ⭐ 1. JSX là gì ?
 
-JSX là viết tắt của JavaScript XML, một cú pháp mở rộng cho phép lập trình viên viết HTML trong React một cách dễ dàng. 
+JSX là một cú pháp mở rộng cho JavaScript được sử dụng trong ReactJS để xây dựng giao diện người dùng. JSX cho phép chúng ta viết mã HTML tương tự và sử dụng các thành phần React để xây dựng giao diện. 
 
-React sử dụng JSX để tạo khuôn mẫu thay vì JavaScript thông thường.
+JSX giúp chúng ta tạo ra các đối tượng React Element, mô tả cách giao diện người dùng sẽ được hiển thị. JSX kết hợp các thành phần React và HTML trong một cú pháp duy nhất, giúp mã nguồn trở nên dễ đọc và dễ hiểu hơn.
 
-Chúng ta không cần phải sử dụng đến React.createElement để tạo các elements một cách phức tạp nữa.
 
-React sử dụng thư viện `Babel` tích hợp sâu bên trong để thực hiện biên dịch JSX rang cú pháp React một cách tự động.
+- https://www.w3schools.com/REACT/react_jsx.asp
+- https://react.dev/learn/writing-markup-with-jsx
 
-Minh họa [Babel Compelier](https://babeljs.io/repl/#?browsers=defaults%2C%20not%20ie%2011%2C%20not%20ie_mob%2011&build=&builtIns=false&corejs=3.21&spec=false&loose=false&code_lz=GYVwdgxgLglg9mABACwKYBt1wBQEpEDeAUIogE6pQhlIA8AJjAG4B8AEhlogO5xnr0AhLQD0jVgG4iAXyJA&debug=false&forceAllTransforms=false&shippedProposals=false&circleciRepo=&evaluate=false&fileSize=false&timeTravel=false&sourceType=module&lineWrap=true&presets=react&prettier=false&targets=&version=7.20.11&externalPlugins=&assumptions=%7B%7D)
-
--------------
-<https://reactjs.org/docs/introducing-jsx.html>
+***
 
 **CÚ PHÁP JSX**
+
+Mở file index.js/index.ts trong thư mục src
 
 ```js
 //html 1 dòng
 const element = <h1>Hello, world!</h1>;
-
+const root = ReactDOM.createRoot(document.getElementById('root'));
+root.render(myElement);
 ```
 
 ```js
@@ -33,7 +33,10 @@ const element = (
     <h2>Good to see you here.</h2>
   </div>
 );
+const root = ReactDOM.createRoot(document.getElementById('root'));
+root.render(element);
 ```
+
 
 ```js
 //Biểu thức trong JSX
@@ -124,8 +127,7 @@ export default function TodoList() {
 ## ⭐ 5. Comment strong JSX
 
 ```js
-render() {
-  return (
+let elements =  (
     <div>
       <!-- This doesn't work! -->
       {/* A JSX comment */}
@@ -138,8 +140,8 @@ render() {
       */} 
 
     </div>
-  )
-}
+);
+
 ```
 
 ## ⭐ 6. JavaScript in JSX with Curly Braces
@@ -149,14 +151,10 @@ Doc: <https://beta.reactjs.org/learn/javascript-in-jsx-with-curly-braces>
 Bằng cách sử dụng cặp dấu ngoặc nhọn {...}, bạn có thể sử dụng cú pháp Javascript bên trong nó.
 
 ```js
-//App.js
 
-export default function SayHello() {
-  const name = 'Lionel Messi';
-  return (
-    <h1>Xin chào {name} !</h1>
-  );
-}
+const name = 'Lionel Messi';
+let myElement = <h1>Xin chào {name} !</h1>;
+
 ```
 
 Như vậy bạn có thể sử dụng BIẾN ngay trong HTML với hỗ trợ của JSX.
@@ -181,8 +179,7 @@ const avatar = '';
 **🔹 inline CSS**
 
 ```js
-export default function Courses() {
-  return (
+let Courses = (
     <ul style={{
       backgroundColor: 'black',
       color: 'pink'
@@ -192,7 +189,7 @@ export default function Courses() {
       <li>Node JS</li>
     </ul>
   );
-}
+
 ```
 
 Thì ở đây Css Inline là một Object với các properties của CSS thì chuyển qua dạng camelCase nếu nó có 2 từ trở lên.
@@ -210,8 +207,7 @@ const subject = {
     color: 'pink'
   }
 }
-export default function Courses() {
-  return (
+let Courses = (
     <div style={subject.theme}>
       <h1>{subject.name}</h1>
       <ul>
@@ -219,6 +215,6 @@ export default function Courses() {
         <li>Address: {subject.address}</li>
       </ul>
     </div>
-  );
-}
+);
+
 ```
