--- a/1.RoadMap-40h/Session-02-JSX-Components-Props/2.3.Add-style-Component.md
+++ b/1.RoadMap-40h/Session-02-JSX-Components-Props/2.3.Add-style-Component.md
@@ -23,6 +23,8 @@ Trong React bạn sử dụng CSS class với tên là className. Nó giống nh
 import './App.css'
 ```
 
+Lưu ý: Nếu bạn import css vào trong file App thì css đó sẽ có tính toàn cục (tức tất cả mọi nơi đều có thể sử dụng)
+
 ### 🔥 2. Inline styling
 
 Trong React, inline styles không được viết dưới dạng string (chuỗi) như html thông thường. Thay vào đó nó sẽ được viết dưới dạng Object với key được viết theo kiểu camelCased còn style của value sẽ thường là kiểu string.
