--- a/1.RoadMap-40h/Session-02-JSX-Components-Props/2.3.Add-style-Component.md
+++ b/1.RoadMap-40h/Session-02-JSX-Components-Props/2.3.Add-style-Component.md
@@ -75,6 +75,11 @@ npm install styled-components --save
 - <https://viblo.asia/p/su-dung-styled-component-trong-react-63vKjjWyK2R>
 
 
+
+### 🔥 5 Css Framework
+
+Nhúng các thư viện Css Framework: TailwindCss, Bootstrap
+
 ## 🌻 Embed icon Font React
 
 - React Icons <https://react-icons.github.io/react-icons>
