--- a/1.RoadMap-40h/Session-11-Redux-Zustand/Manage-State/1.React-Redux.md
+++ b/1.RoadMap-40h/Session-11-Redux-Zustand/Manage-State/1.React-Redux.md
@@ -1,30 +1,45 @@
-- https://react-redux.js.org
+# Giới thiệu về Redux
+
+    https://react-redux.js.org
 
 
-Install packages: redux, react-redux:
-```bash
-npm install --save redux
-```
+##  Tại sao phải dùng Redux?
 
-hoặc
+##  Cài đặt Redux.
 
-```bash
-yarn add redux
-npm isntall --save react-redux
-```
-
-hoặc
 
 ```bash
 yarn add react-redux
-npm isntall --save --dev redux-devtools-extension
 ```
 
-hoặc
+Công cụ gở lỗi
 
 ```bash
 yarn add --dev redux-devtools-extension
 ```
+
+## Cách hoạt động của Redux
+
+Các thành phần của Redux bao gồm:
+
+- Store: Store đơn giản là 1 object chứa tất cả state toàn cục của ứng dụng. Nhưng thay vì lưu các state, nó lưu các reducer, sẽ được nói sau.
+- Các Action: Khi ta định nghĩa các action, ta khai báo các tên của hành động trong ứng dụng. Lấy ví dụ ta có 1 state là counter và cần 2 phương thức để tăng và giảm giá trị của counter. Lúc này ta định nghĩa 2 action có tên là 'INCREMENT' và 'DECREMENT' và chỉ vậy thôi, việc xử lý thay đổi state của counter sẽ nhường cho reducer.
+- Các Reducer: 1 reducer tương đương với 1 state nhưng kèm theo các mô tả state sẽ thay đổi như thế nào khi các action khác nhau được gọi. Trong ví dụ ta có reducer là counter, nó lưu state của counter và kiểm tra action vừa được gọi là INCREMENT hay DECREMENT và trả về state mới là state+1 hay state-1 tương ứng.
+- Các Dispatch: Khi cần dùng 1 action ở component, ta gọi action đó đơn giản bằng cách sử dụng phương thức dispatch. VD: dispatch(increment()), dispatch(decrement()).
+
+
+Cách vận hành được tóm gọn bởi sơ đồ sau:
+
+![redux](https://d33wubrfki0l68.cloudfront.net/01cc198232551a7e180f4e9e327b5ab22d9d14e7/b33f4/assets/images/reduxdataflowdiagram-49fa8c3968371d9ef6f2a1486bd40a26.gif)
+
+
+## Cấu hình App với Redux
+
+
+## Tìm hiểu cách sử dụng qua một Ví dụ simple Bank
+
+
+
 
 Coding:
 
