--- a/1.RoadMap-40h/Session-11-Redux-Zustand/Manage-State/1.React-Redux.md
+++ b/1.RoadMap-40h/Session-11-Redux-Zustand/Manage-State/1.React-Redux.md
@@ -33,24 +33,146 @@ Cách vận hành được tóm gọn bởi sơ đồ sau:
 ![redux](https://d33wubrfki0l68.cloudfront.net/01cc198232551a7e180f4e9e327b5ab22d9d14e7/b33f4/assets/images/reduxdataflowdiagram-49fa8c3968371d9ef6f2a1486bd40a26.gif)
 
 
-## Cấu hình App với Redux
-
-
 ## Tìm hiểu cách sử dụng qua một Ví dụ simple Bank
 
+Ứng dụng Simplebank để rút tiền và nạp tiền vào tài khoản ngân hàng. Trong ví dụ này, chúng ta sẽ sử dụng Redux để quản lý trạng thái tài khoản ngân hàng của người dùng.
 
+### Bước 1 - Khởi tạo Redux Store
 
+Đầu tiên, chúng ta sẽ tạo ra Redux Store và các actions để rút tiền và nạp tiền:
 
-Coding:
+Tạo một folder BankApp trong thư mục src, sau đó tạo lần lượt các file sau:
 
-- actions / types.js (constants)
-- actions / index.js
-- reducers / index.js
-- components
-- root reducers (store.js)
-- store (store.js)
-- App.js (config Provider with store)
+Bước 1.1 Tạo action (các lệnh điều khiển)
 
-Debug:
+```js
+// bankActions.js
 
-Download tool: add react redux tool (chrome)
+//Lệnh rút tiền
+export const withdrawMoney = (amount) => ({
+  type: 'WITHDRAW_MONEY',
+  payload: amount,
+});
+//lệnh Nạp tiền
+export const depositMoney = (amount) => ({
+  type: 'DEPOSIT_MONEY',
+  payload: amount,
+});
+
+```
+
+Bước 1.2 Tạo Reducer
+
+```js
+// bankReducer.js
+const initialState = {
+  balance: 0,
+};
+
+//Xử lý các action mà dispatch gửi lên
+const bankReducer = (state = initialState, action) => {
+  switch (action.type) {
+    case 'WITHDRAW_MONEY':
+      return {
+        ...state,
+        balance: state.balance - action.payload,
+      };
+    case 'DEPOSIT_MONEY':
+      return {
+        ...state,
+        balance: state.balance + action.payload,
+      };
+    default:
+      return state;
+  }
+};
+
+export default bankReducer;
+
+```
+
+1.3 Tạo store
+
+```js
+// store.js
+import { createStore } from 'redux';
+import bankReducer from './bankReducer';
+
+//Lệnh khởi tạo store
+//createStore nhận bankReducer làm đầu vào
+const store = createStore(bankReducer);
+
+export default store;
+```
+
+### Bước 2 - Tạo Component và Kết nối với Redux Store
+
+```js
+// BankAccount.js
+import React, { useState } from 'react';
+import { useSelector, useDispatch } from 'react-redux';
+import { withdrawMoney, depositMoney } from './bankActions';
+
+const BankAccount = () => {
+  const [amount, setAmount] = useState('');
+   //trạng thái số dư
+  const balance = useSelector((state) => state.balance);
+  const dispatch = useDispatch();
+
+    //Sự kiện rút tiền
+  const handleWithdraw = () => {
+    dispatch(withdrawMoney(Number(amount)));
+    setAmount('');
+  };
+  
+  //Sự kiện nạp tiền
+  const handleDeposit = () => {
+    dispatch(depositMoney(Number(amount)));
+    setAmount('');
+  };
+
+  return (
+    <div>
+      <h2>Balance: {balance}</h2>
+      <div>
+        <input
+          type="number"
+          value={amount}
+          onChange={(e) => setAmount(e.target.value)}
+        />
+        <button onClick={handleWithdraw}>Withdraw</button>
+        <button onClick={handleDeposit}>Deposit</button>
+      </div>
+    </div>
+  );
+};
+
+export default BankAccount;
+
+```
+
+### Bước 3: Tạo và render ứng dụng
+
+Chỉnh sửa lại file App, tích hợp Redux vào
+
+```js
+// App.js
+import React from 'react';
+import { Provider } from 'react-redux';
+import BankAccount from './BankApp/BankAccount';
+import store from './BankApp/store';
+
+const App = () => {
+  return (
+    <Provider store={store}>
+      <div>
+        <h1>Simple Bank App</h1>
+        <BankAccount />
+      </div>
+    </Provider>
+  );
+};
+
+export default App;
+
+```
