--- a/1.RoadMap-40h/Session-11-Redux-Zustand/Manage-State/4.Zustand.md
+++ b/1.RoadMap-40h/Session-11-Redux-Zustand/Manage-State/4.Zustand.md
@@ -13,114 +13,6 @@ npm install zustand
 
 Dùng cho TypeScript: <https://github.com/pmndrs/zustand#typescript-usage>
 
-Chúng ta làm một ví dụ AppCountdown sử dụng Zustand để học cách sử dụng
-
-
-## Bước 1: Tạo một store
-
-Tạo src/hooks/useStore.js
-
-```js
-import {create} from 'zustand';
-
-interface TypeState {
-    count: number;
-    actionUp: () => void;
-    actionDown: () => void
-  }
-  
-export const useCount = create<TypeState>((set) => ({
-      count: 0,
-      actionUp: () => set((state) => ({ count: state.count + 1 })),
-      actionDown: () => set((state) => ({ count: state.count - 1 })),
-  }));
-      actionDown: () => set(state => ({ count: state.count - 1 })),
-}));
-
-```
-- **`create()`** là một function nó nhận đầu vào là một initState.
-
-- Tuy nhiên zustand quản lý `state` tập trung thành ở một chổ mà chúng ta gọi nó với một khái niệm là `store`
-
-- zustand sử dụng một phương thức set để `merges state` gộp count, actionUp, actionDown... lại thành 1 state.
-
-
-## Bước 2: Truy cập vào Store
-
-Để có thể lấy giá trị của state nằm trong store cụ thể thì chúng ta chỉ cần gọi lại store đó  ở component như sau
-
-```js
-import { useCount } from "../../hooks/useCount";
-const CountApp = () => {
-    //Truy cập lần lượt các giá trị của state strong Store
-    const count = useCount(state => state.count);
-    const actionUp = useCount(state => state.actionUp);
-    const actionDown = useCount(state => state.actionDown);
-
-  return (
-    <div>
-      <h1>{count}</h1>
-      <button onClick={actionDown}>Down</button>
-      <button onClick={actionUp}>Up</button>
-    </div>
-  )
-}
-export default CountApp;
-```
-
-## Bước 3: Đưa CountApp vào App
-
-```js
-function App(){
-  return (
-    <div>
-    <CountApp />
-    </div>
-  )
-}
-
-```
-
-Xem kết quả và so sánh với cách sử dụng useSate, useReducer
-
-## Điểm nổi bật của Zustand
-
-* Cấu hình đơn giản
-* Dễ sử dụng
-* Ở đâu cũng có thể truy cập đến store chung
-
-
-```js
-function App(){
-  return (
-    <div>
-    <CountApp />
-    <CountAppHangXom />
-    </div>
-  )
-}
-
-```
-
-Đứng từ `CountAppHangXom` bạn cũng có thể điều khiển được state ở `CountApp`
-
-
-```js
-import { useCount } from "../../hooks/useCount";
-const CountAppHangXom = () => {
-    const actionUp = useCount(state => state.actionUp);
-    const actionDown = useCount(state => state.actionDown);
-
-  return (
-    <div>
-      <h1>CountAppHangXom</h1>
-      <button onClick={actionDown}>Down</button>
-      <button onClick={actionUp}>Up</button>
-    </div>
-  )
-}
-export default CountAppHangXom;
-```
 
 ## Persist middleware
 
@@ -145,3 +37,91 @@ export const useBearStore = create(
 
 ```
 Xem ở phần ví dụ tạo giỏ hàng 2.Examples\Shopping-Cart-Zustand
+
+
+## bankSimple với Zustand
+
+Bước 1: Tạo store
+
+```js
+// bankStore.js
+import create from 'zustand';
+
+const useBankStore = create((set) => ({
+  balance: 0,
+  withdrawMoney: (amount) => set((state) => ({ balance: state.balance - amount })),
+  depositMoney: (amount) => set((state) => ({ balance: state.balance + amount })),
+}));
+
+export default useBankStore;
+
+```
+
+Bước 2: Tích hợp vào BankAccount Component
+
+```js
+// BankAccount.js
+import React, { useState } from 'react';
+import useBankStore from './bankStore';
+
+const BankAccount = () => {
+  const [amount, setAmount] = useState('');
+  const balance = useBankStore((state) => state.balance);
+  const withdrawMoney = useBankStore((state) => state.withdrawMoney);
+  const depositMoney = useBankStore((state) => state.depositMoney);
+
+  const handleWithdraw = () => {
+    withdrawMoney(Number(amount));
+    setAmount('');
+  };
+
+  const handleDeposit = () => {
+    depositMoney(Number(amount));
+    setAmount('');
+  };
+
+  return (
+    <div>
+      <h2>Balance: {balance}</h2>
+      <div>
+        <input
+          type="number"
+          value={amount}
+          onChange={(e) => setAmount(e.target.value)}
+        />
+        <button onClick={handleWithdraw}>Withdraw</button>
+        <button onClick={handleDeposit}>Deposit</button>
+      </div>
+    </div>
+  );
+};
+
+export default BankAccount;
+
+```
+
+Bước 3: Render ứng dụng
+
+```js
+// App.js
+import React from 'react';
+import { Provider } from 'react-redux';
+import BankAccount from './BankAccount';
+import useBankStore from './bankStore';
+
+const App = () => {
+  return (
+    <Provider>
+      <div>
+        <h1>Simple Bank App</h1>
+        <BankAccount />
+      </div>
+    </Provider>
+  );
+};
+
+export default App;
+
+```
+
+Cú pháp và cách sử dụng Zustand khá tương đồng với Redux, nhưng nó có cú pháp ngắn gọn và dễ dàng sử dụng hơn trong một số trường hợp đơn giản
