--- a/1.RoadMap-40h/Session-02-JSX-Components-Props/2.1.Introducing-JSX.md
+++ b/1.RoadMap-40h/Session-02-JSX-Components-Props/2.1.Introducing-JSX.md
@@ -1,8 +1,6 @@
 # Introducing JSX
 
-Doc: <https://reactjs.org/docs/introducing-jsx.html>
-
-## ⭐ 1. JSX là gì ?
+## JSX là gì ?
 
 JSX là một cú pháp mở rộng cho JavaScript được sử dụng trong ReactJS để xây dựng giao diện người dùng. JSX cho phép chúng ta viết mã HTML tương tự và sử dụng các thành phần React để xây dựng giao diện. 
 
@@ -12,17 +10,31 @@ JSX giúp chúng ta tạo ra các đối tượng React Element, mô tả cách 
 - https://www.w3schools.com/REACT/react_jsx.asp
 - https://react.dev/learn/writing-markup-with-jsx
 
-***
+## ⭐1. Cách sử dụng JSX
 
-**CÚ PHÁP JSX**
+Để tạo ra một câu Hello world bằng HTML
+
+```html
+<h1 class="greeting">Hello, world!</h1>
+```
+
+Trong React bạn phải sử dụng phương thức JavaScript để tạo các phần tử HTML:
+
+```js
+const element = React.createElement('h1', { className: 'greeting' }, 'Hello, world!');
+```
+
+Cách viết này khá phức tạp và tồn thời gian để tạo ra một UI.
+Thay vào đó người ta phát triển ra một thư viện giúp bạn đơn giản hóa hơn cách code đó là JSX.
+
+JSX giúp bạn tạo ra các elements trong javascript như code bên HTML thuần túy
+
 
 Mở file index.js/index.ts trong thư mục src
 
 ```js
 //html 1 dòng
-const element = <h1>Hello, world!</h1>;
-const root = ReactDOM.createRoot(document.getElementById('root'));
-root.render(myElement);
+const element = <h1 className="greeting">Hello, world!</h1>;
 ```
 
 ```js
@@ -33,8 +45,18 @@ const element = (
     <h2>Good to see you here.</h2>
   </div>
 );
-const root = ReactDOM.createRoot(document.getElementById('root'));
-root.render(element);
+
+```
+
+
+Khi ứng dụng chạy thì JSX được biên dịch ngược lại cú pháp của javascript như ví dụ trên.
+
+Bạn có thể render ra giao diện người dùng
+
+```js
+ReactDOM.createRoot(document.getElementById('root')!).render(
+  element,
+)
 ```
 
 
@@ -51,9 +73,9 @@ const myelement = <h1>React is {5 + 5} times better with JSX</h1>;
 
 ## ⭐ 2. Một số ưu điểm của JSX trong ReactJs
 
-- Mang lại tốc độ nhanh hơn vì nó thực hiện tối ưu hóa khi biên dịch mã sang JavaScript.
-- Hầu hết các lỗi đều có thể được phát hiện ngay trong quá trình biên dịch mã.
-- Nếu bạn quen thuộc với HTML, JSX sẽ giúp bạn viết các mẫu (templates) nhanh và dễ dàng hơn.
+- Dễ đọc và dễ viết: Cú pháp giống HTML giúp viết các thành phần React một cách dễ dàng và tự nhiên.
+- Tích hợp JavaScript: Có thể sử dụng các biểu thức JavaScript để tích hợp logic vào trong mã JSX.
+- Tối ưu hóa mã: JSX giúp viết mã gọn gàng và tổ chức tốt hơn, dễ dàng bảo trì và phát triển
 
 ## ⭐3. Mốt số lưu ý trong JSX ?
 
