--- a/1.RoadMap-40h/Session-02-JSX-Components-Props/2.2.Components-Props.md
+++ b/1.RoadMap-40h/Session-02-JSX-Components-Props/2.2.Components-Props.md
@@ -2,8 +2,10 @@
 
 ## 🔥 Component trong React là gì ? 
 
-- Các component là các thành phần độc lập và có thể sử tái sử dụng.
-- Các component thực hiện công việc giống như các functions trong JavaScript nhưng chúng độc lập và nhiệm vụ chính là trả về HTML thông qua hàm render
+- Trong React, "component" (thành phần) là một phần của giao diện người dùng được chia thành các phần nhỏ, có thể tái sử dụng và độc lập. Chúng giúp bạn chia nhỏ các phần phức tạp của ứng dụng thành các phần nhỏ hơn, dễ quản lý và tái sử dụng.
+
+-React được xây dựng trên cơ sở của các thành phần. Mỗi thành phần là một đoạn mã JavaScript độc lập có thể nhận dữ liệu đầu vào và trả về một phần giao diện người dùng (UI) cụ thể. Khi dữ liệu đầu vào thay đổi, giao diện người dùng sẽ được cập nhật một cách tự động mà không cần phải thực hiện lại trang web.
+
 - Chúng ta có thể xây dựng giao diện người dùng bằng cách kết hợp các Component lại với nhau
 - Có 2 loại component là Function Component và Class Component.
 
@@ -189,19 +191,13 @@ Ví dụ:
 
 - Một thành phần thường xuyên thay đổi nội dung.
 
-### 🔷 Từ HTML đến React Component
-
-Cách nhìn nhận từ một HTML UI làm sao chuyển nó thành React UI hợp lý.
-
-Xem ví dụ: <https://widget-components.vercel.app>
-
 
 ## 🔥 Props là gì ? 
 
 - Props là các tham số được truyền vào một React components.
 - Props có thể sử dụng như là một HTML attribute
 
-### Tại sao lại cần đến Props?
+### 🌻 Tại sao lại cần đến Props?
 
 Để trả lời câu hỏi này chúng ta cùng tạo ra 2 button trên như sau:
 
@@ -368,6 +364,7 @@ function Dad({children}){
   )
 }
 ```
+
 **Everything can be a child**
 
 Children trong React thì không nhất thiết phải là cái gì, nó có thể là 1 component hay nhiều component, 1 thẻ h1 hoặc nhiều thẻ h1, 1 chữ hoặc nhiều chữ...
@@ -523,3 +520,9 @@ Tham khảo sử dụng Prop với TypeScript
 
 - <https://cinthialandia.com/blog/props/>
 
+
+## 🔥 Từ HTML đến React Component
+
+Cách nhìn nhận từ một HTML UI làm sao chuyển nó thành React UI hợp lý.
+
+Xem ví dụ: <https://widget-components.vercel.app>
