--- a/1.RoadMap-40h/Session-02-JSX-Components-Props/2.5.PropTypes.md
+++ b/1.RoadMap-40h/Session-02-JSX-Components-Props/2.5.PropTypes.md
@@ -4,7 +4,7 @@ PropTypes là một cách tốt để xác thực đầu vào của component. H
 
 Hiểu một cách đơn giản PropTypes là: Giúp chúng ta kiểm tra các kiểu dữ liệu của các props mà component (hoặc container) nhận vào.
 
-- Doc: <https://reactjs.org/docs/typechecking-with-proptypes.html>
+- Doc: <https://legacy.reactjs.org/docs/typechecking-with-proptypes.html>
 - Cách cài đặt Package
 
 ```bash
