--- a/1.RoadMap-40h/Session-02-JSX-Components-Props/2.2.Components-Props.md
+++ b/1.RoadMap-40h/Session-02-JSX-Components-Props/2.2.Components-Props.md
@@ -21,6 +21,9 @@ Doc:
 
 >Bất kỳ một thành phẩn UI nào hiển thị ra màn hình đều có thể là một Component
 
+![is component](img/thing-component.png)
+
+![is component](img/thing-component-2.png)
 
 Ví dụ thực tế Components: 5.Demo-Projects\product.html
 
