--- a/1.RoadMap-40h/Session-10-Redux-Zustand/Manage-State/4.Zustand.md
+++ b/1.RoadMap-40h/Session-10-Redux-Zustand/Manage-State/4.Zustand.md
@@ -13,30 +13,7 @@ npm install zustand
 
 Dùng cho TypeScript: <https://github.com/pmndrs/zustand#typescript-usage>
 
-
-## Persist middleware
-
-Doc: <https://github.com/pmndrs/zustand/blob/main/docs/integrations/persisting-store-data.md>
-
-**Persist** giúp bạn lưu trữ Zustand state xuống Storage (e.g., localStorage, AsyncStorage, IndexedDB, etc.)
-
-
-```js
-export const useBearStore = create(
-  persist(
-    (set, get) => ({
-      bears: 0,
-      addABear: () => set({ bears: get().bears + 1 }),
-    }),
-    {
-      name: 'food-storage', // name of the item in the storage (must be unique)
-      storage: createJSONStorage(() => sessionStorage), // (optional) by default, 'localStorage' is used
-    }
-  )
-)
-
-```
-Xem ở phần ví dụ tạo giỏ hàng 2.Examples\Shopping-Cart-Zustand
+Chúng ta cùng tìm hiểu qua ví dụ sau:
 
 
 ## bankSimple với Zustand
@@ -125,3 +102,167 @@ export default App;
 ```
 
 Cú pháp và cách sử dụng Zustand khá tương đồng với Redux, nhưng nó có cú pháp ngắn gọn và dễ dàng sử dụng hơn trong một số trường hợp đơn giản
+
+
+## Ví dụ về Call API
+
+Để thực hiện việc hiển thị danh sách sản phẩm, thêm mới, xóa và cập nhật sản phẩm sử dụng Zustand và React, chúng ta sẽ cần tạo một store để quản lý trạng thái của các sản phẩm và các hàm để thực hiện các thao tác CRUD (Create, Read, Update, Delete). Hãy làm theo các bước sau:
+
+Bước 1: Cài đặt Zustand và Axios (để gọi API)
+
+Đảm bảo bạn đã cài đặt Zustand và Axios bằng cách chạy lệnh sau:
+
+```bash
+npm install zustand axios
+# Hoặc sử dụng yarn:
+yarn add zustand axios
+```
+
+Bước 2: Tạo Store và Các Hàm CRUD
+
+```jsx
+// store.js
+import create from 'zustand';
+import axios from 'axios';
+
+const apiUrl = 'https://api.escuelajs.co/api/v1/products';
+
+const useProductStore = create((set) => ({
+  products: [],
+  fetchProducts: async () => {
+    try {
+      const response = await axios.get(apiUrl);
+      set({ products: response.data });
+    } catch (error) {
+      console.error('Error fetching products:', error);
+    }
+  },
+  addProduct: async (newProduct) => {
+    try {
+      const response = await axios.post(apiUrl, newProduct);
+      set((state) => ({ products: [...state.products, response.data] }));
+    } catch (error) {
+      console.error('Error adding product:', error);
+    }
+  },
+  deleteProduct: async (productId) => {
+    try {
+      await axios.delete(`${apiUrl}/${productId}`);
+      set((state) => ({
+        products: state.products.filter((product) => product.id !== productId),
+      }));
+    } catch (error) {
+      console.error('Error deleting product:', error);
+    }
+  },
+  updateProduct: async (productId, updatedProduct) => {
+    try {
+      const response = await axios.put(`${apiUrl}/${productId}`, updatedProduct);
+      set((state) => ({
+        products: state.products.map((product) =>
+          product.id === productId ? response.data : product
+        ),
+      }));
+    } catch (error) {
+      console.error('Error updating product:', error);
+    }
+  },
+}));
+
+export default useProductStore;
+```
+
+Trong ví dụ trên, chúng ta đã tạo một store có tên `useProductStore` để quản lý trạng thái của danh sách sản phẩm và các hàm để thực hiện các thao tác CRUD.
+
+Bước 3: Sử dụng Store trong Component
+
+```jsx
+// App.js
+import React, { useEffect } from 'react';
+import useProductStore from './store';
+
+function App() {
+  const products = useProductStore((state) => state.products);
+  const fetchProducts = useProductStore((state) => state.fetchProducts);
+  const addProduct = useProductStore((state) => state.addProduct);
+  const deleteProduct = useProductStore((state) => state.deleteProduct);
+  const updateProduct = useProductStore((state) => state.updateProduct);
+
+  useEffect(() => {
+    fetchProducts();
+  }, [fetchProducts]);
+
+  const handleAddProduct = async () => {
+    const newProduct = {
+      title: 'New Product',
+      price: 10,
+      description: 'A description',
+      categoryId: 1,
+      images: ['https://placeimg.com/640/480/any'],
+    };
+    await addProduct(newProduct);
+  };
+
+  const handleDeleteProduct = async (productId) => {
+    await deleteProduct(productId);
+  };
+
+  const handleUpdateProduct = async (productId) => {
+    const updatedProduct = {
+      title: 'Updated Product',
+      price: 20,
+      description: 'An updated description',
+      categoryId: 2,
+      images: ['https://placeimg.com/640/480/any'],
+    };
+    await updateProduct(productId, updatedProduct);
+  };
+
+  return (
+    <div>
+      <h1>Product List</h1>
+      <ul>
+        {products.map((product) => (
+          <li key={product.id}>
+            <strong>{product.title}</strong> - ${product.price}
+            <button onClick={() => handleDeleteProduct(product.id)}>Delete</button>
+            <button onClick={() => handleUpdateProduct(product.id)}>Update</button>
+          </li>
+        ))}
+      </ul>
+      <button onClick={handleAddProduct}>Add New Product</button>
+    </div>
+  );
+}
+
+export default App;
+```
+
+Trong ví dụ trên, chúng ta đã sử dụng store `useProductStore` và các hàm CRUD để hiển thị danh sách sản phẩm, thêm mới, xóa và cập nhật sản phẩm. Khi người dùng nhấn nút "Add New Product", "Delete" hoặc "Update" sản phẩm, chúng ta sẽ gọi các hàm tương ứng từ store để thực hiện các thao tác CRUD.
+
+Lưu ý rằng, đây chỉ là một ví dụ đơn giản để minh họa việc sử dụng Zustand với React để quản lý trạng thái và thực hiện các thao tác CRUD. Trong ứng dụng thực tế, bạn có thể cần xử lý nhiều trường hợp và điều kiện hơn.
+
+
+## Persist middleware
+
+Doc: <https://github.com/pmndrs/zustand/blob/main/docs/integrations/persisting-store-data.md>
+
+**Persist** giúp bạn lưu trữ Zustand state xuống Storage (e.g., localStorage, AsyncStorage, IndexedDB, etc.)
+
+
+```js
+export const useBearStore = create(
+  persist(
+    (set, get) => ({
+      bears: 0,
+      addABear: () => set({ bears: get().bears + 1 }),
+    }),
+    {
+      name: 'food-storage', // name of the item in the storage (must be unique)
+      storage: createJSONStorage(() => sessionStorage), // (optional) by default, 'localStorage' is used
+    }
+  )
+)
+
+```
+Xem ở phần ví dụ tạo giỏ hàng 2.Examples\Shopping-Cart-Zustand
