--- a/1.RoadMap-40h/Session-10-Redux-Zustand/Manage-State/4.Zustand.md
+++ b/1.RoadMap-40h/Session-10-Redux-Zustand/Manage-State/4.Zustand.md
@@ -129,42 +129,58 @@ const apiUrl = 'https://api.escuelajs.co/api/v1/products';
 
 const useProductStore = create((set) => ({
   products: [],
+  isLoading: false,
+  error: null, // Trạng thái lưu trữ thông báo lỗi
+
   fetchProducts: async () => {
     try {
+      set({ isLoading: true, error: null });
       const response = await axios.get(apiUrl);
-      set({ products: response.data });
+      set({ products: response.data, isLoading: false });
     } catch (error) {
       console.error('Error fetching products:', error);
+      set({ isLoading: false, error: 'Error fetching products' });
     }
   },
+
   addProduct: async (newProduct) => {
     try {
+      set({ isLoading: true, error: null });
       const response = await axios.post(apiUrl, newProduct);
-      set((state) => ({ products: [...state.products, response.data] }));
+      set((state) => ({ products: [...state.products, response.data], isLoading: false }));
     } catch (error) {
       console.error('Error adding product:', error);
+      set({ isLoading: false, error: 'Error adding product' });
     }
   },
+
   deleteProduct: async (productId) => {
     try {
+      set({ isLoading: true, error: null });
       await axios.delete(`${apiUrl}/${productId}`);
       set((state) => ({
         products: state.products.filter((product) => product.id !== productId),
+        isLoading: false
       }));
     } catch (error) {
       console.error('Error deleting product:', error);
+      set({ isLoading: false, error: 'Error deleting product' });
     }
   },
+
   updateProduct: async (productId, updatedProduct) => {
     try {
+      set({ isLoading: true, error: null });
       const response = await axios.put(`${apiUrl}/${productId}`, updatedProduct);
       set((state) => ({
         products: state.products.map((product) =>
           product.id === productId ? response.data : product
         ),
+        isLoading: false
       }));
     } catch (error) {
       console.error('Error updating product:', error);
+      set({ isLoading: false, error: 'Error updating product' });
     }
   },
 }));
@@ -187,6 +203,12 @@ function App() {
   const addProduct = useProductStore((state) => state.addProduct);
   const deleteProduct = useProductStore((state) => state.deleteProduct);
   const updateProduct = useProductStore((state) => state.updateProduct);
+  const updateProduct = useProductStore((state) => state.updateProduct);
+  const isLoading = useProductStore((state) => state.isLoading);
+  const error = useProductStore((state) => state.error);
+
+  //Có thể rút gọn lại như sau:
+  // const { products, isLoading, error, fetchProducts, addProduct, deleteProduct, updateProduct } = useProductStore();
 
   useEffect(() => {
     fetchProducts();
@@ -221,6 +243,8 @@ function App() {
   return (
     <div>
       <h1>Product List</h1>
+      {isLoading && <div>Loading...</div>}
+      {error && <div>Error: {error}</div>}
       <ul>
         {products.map((product) => (
           <li key={product.id}>
