--- a/1.RoadMap-40h/Session-10-Redux-Zustand/Manage-State/4.Zustand.md
+++ b/1.RoadMap-40h/Session-10-Redux-Zustand/Manage-State/4.Zustand.md
@@ -275,6 +275,9 @@ Doc: <https://github.com/pmndrs/zustand/blob/main/docs/integrations/persisting-s
 
 
 ```js
+import { create } from 'zustand'
+import { persist, createJSONStorage } from 'zustand/middleware'
+
 export const useBearStore = create(
   persist(
     (set, get) => ({
