--- a/1.RoadMap-40h/Session-02-JSX-Components-Props/2.2.Components-Props.md
+++ b/1.RoadMap-40h/Session-02-JSX-Components-Props/2.2.Components-Props.md
@@ -194,6 +194,13 @@ Ví dụ:
 
 - Một thành phần thường xuyên thay đổi nội dung.
 
+## 🔥 Cú Pháp JSX ? 
+
+Cách mà làm cho Component trở nên Dynamic hơn
+
+Xem [Giới thiệu về JSX](2.1.Introducing-JSX.md)
+
+
 
 ## 🔥 Props là gì ? 
 
