--- a/1.RoadMap-40h/Session-02-JSX-Components-Props/2.3.Add-style-Component.md
+++ b/1.RoadMap-40h/Session-02-JSX-Components-Props/2.3.Add-style-Component.md
@@ -99,3 +99,16 @@ function MyComponent() {
 }
 ```
 - Font Awesome: <https://fontawesome.com/v5/docs/web/use-with/react>
+
+
+## 🌻 Chèn hình vào React
+
+Bước 1: Lưu tất cả hình vào một folder `images` trong thư mục public
+
+Bước 2: Cách sử dụng hình
+
+```jsx
+<img src="./images/ten-hinh.png" alt="" />
+```
+
+Khi ứng dụng chạy thì thư mục public là thư mục gốc
