--- a/1.RoadMap-40h/Session-02-JSX-Components-Props/2.3.Add-style-Component.md
+++ b/1.RoadMap-40h/Session-02-JSX-Components-Props/2.3.Add-style-Component.md
@@ -80,6 +80,17 @@ npm install styled-components --save
 
 Nhúng các thư viện Css Framework: TailwindCss, Bootstrap
 
+
+### 🔥 5 Sass (Advanced) ?
+
+SASS/SCSS là một chương trình tiền xử lý CSS (CSS preprocessor). Nó giúp bạn viết CSS theo cách của một ngôn ngữ lập trình, có cấu trúc rõ ràng, rành mạch.
+
+- Học cú pháp: https://www.w3schools.com/sass/default.php
+
+- Dùng với Reacr: https://www.w3schools.com/react/react_sass_styling.asp
+
+Xem thêm hướng dẫn: [Sass](2.5.Sass-React.md)
+
 ## 🌻 Embed icon Font React
 
 - React Icons <https://react-icons.github.io/react-icons>
