--- a/1.RoadMap-40h/Session-02-JSX-Components-Props/2.3.Add-style-Component.md
+++ b/1.RoadMap-40h/Session-02-JSX-Components-Props/2.3.Add-style-Component.md
@@ -63,7 +63,7 @@ Giúp bạn tránh bị xung đột css
 ```
 
 
-### 🔥 4 Style Component (Advanced) ?
+### 🔥 4. Style Component (Advanced) ?
 
 Styled-components là một thư viện dành cho React và React Native cho phép bạn viết style ở cấp độ component trong ứng dụng của bạn
 
@@ -76,12 +76,12 @@ npm install styled-components --save
 
 
 
-### 🔥 5 Css Framework
+### 🔥 5. Css Framework
 
 Nhúng các thư viện Css Framework: TailwindCss, Bootstrap
 
 
-### 🔥 5 Sass (Advanced) ?
+### 🔥 6. Sass (Advanced) ?
 
 SASS/SCSS là một chương trình tiền xử lý CSS (CSS preprocessor). Nó giúp bạn viết CSS theo cách của một ngôn ngữ lập trình, có cấu trúc rõ ràng, rành mạch.
 
