edit usage image

--- a/1.RoadMap-40h/Session-02-JSX-Components-Props/2.3.Add-style-Component.md
+++ b/1.RoadMap-40h/Session-02-JSX-Components-Props/2.3.Add-style-Component.md
@@ -123,3 +123,13 @@ Bước 2: Cách sử dụng hình
 ```
 
 Khi ứng dụng chạy thì thư mục public là thư mục gốc
+
+
+Hoặc với cách sau
+
+```jsx
+//Import dưới dạng biến images
+import images from './images/ten-hinh.png';
+<img src={images} alt="" />
+```
+
